--- a/package.json
+++ b/package.json
@@ -4,18 +4,36 @@
   "main": "index.js",
   "author": "Lotrek",
   "license": "MIT",
+  "scripts": {
+    "build": "webpack --config webpack.config.js",
+    "build:prod": "NODE_ENV=production webpack --config webpack.config.js --display-error-details -p ",
+    "build:watch": "webpack --config webpack.config.js --watch=true"
+  },
   "devDependencies": {
+    "@babel/core": "^7.5.4",
+    "@babel/preset-env": "^7.5.4",
+    "autoprefixer": "^9.6.1",
     "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "6.0.0",
-    "gulp-babel": "^7.0.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssmin": "^0.2.0",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-minify": "^2.1.0",
-    "gulp-rename": "^1.2.3",
-    "gulp-sass": "^3.2.1",
-    "run-sequence": "^2.2.1"
+    "copy-webpack-plugin": "^5.0.4",
+    "core-js": "^3.6.5",
+    "css-loader": "^3.4.1",
+    "extract-loader": "^3.1.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
+    "run-sequence": "^2.2.1",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^0.23.1",
+    "terser-webpack-plugin": "^2.3.1s",
+    "uglify-js": "^3.6.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "fuse.js": "^6.4.6"
   }
 }
